feat/server management page terminate

--- a/pkg/admin/gui/front-end/html/addProtoConfig.html
+++ b/pkg/admin/gui/front-end/html/addProtoConfig.html
@@ -4,12 +4,12 @@
     <div class="mt-4 mb-2"><strong>{{ index .tab "protocolConfiguration" }} :</strong><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocolConfiguration" }}"></i></div>
     <div class="form-input mt-4">
         <label class="col-form-label">{{ index .tab "serverLogin" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipServerLogin" }}"></i>
-        <input type="text" name="partnerR66serverLogin" class="form-control">
+        <input type="text" name="protoConfigR66serverLogin" class="form-control">
     </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
     <div class="form-input mt-4">
         <label class="col-form-label">{{ index .tab "blockSize" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipBlockSize" }}"></i>
-        <input type="text" name="partnerR66blockSize" class="form-control">
+        <input type="text" name="protoConfigR66blockSize" class="form-control">
     </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2 d-flex align-items-center">
@@ -56,7 +56,7 @@
         <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
         <div class="form-input">
             <label class="col-form-label">{{ index .tab "minTLSVersion" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMinFtpsTLSVersion" }}"></i>
-            <select name="partnerFTPSminTLSVersion" id="partnerFTPSminTLSVersion" class="form-select">
+            <select name="protoConfigFTPSminTLSVersion" id="protoConfigFTPSminTLSVersion" class="form-select">
                 <option value="" disabled selected>{{ index .tab "selectTLSVersion" }}</option>
                 {{ range .TLSVersions }}
                     <option value="{{ . }}">{{ . }}</option>
@@ -81,7 +81,7 @@
     <div class="mt-4 mb-2"><strong>{{ index .tab "protocolConfiguration" }} :</strong><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocolConfiguration" }}"></i></div>
     <div class="form-input mt-4">
         <label class="col-form-label">{{ index .tab "login" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipLogin" }}"></i>
-        <input type="text" name="partnerPeSITlogin" class="form-control">
+        <input type="text" name="protoConfigPeSITlogin" class="form-control">
     </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2 d-flex align-items-center">
@@ -100,12 +100,12 @@
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2">
         <label class="col-form-label">{{ index .tab "checkpointSize" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipCheckpointSize" }}"></i>
-        <input type="text" name="partnerPeSITcheckpointSize" class="form-control">
+        <input type="text" name="protoConfigPeSITcheckpointSize" class="form-control">
     </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2">
         <label class="col-form-label">{{ index .tab "checkpointWindow" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipCheckpointWindow" }}"></i>
-        <input type="text" name="partnerPeSITcheckpointWindow" class="form-control">
+        <input type="text" name="protoConfigPeSITcheckpointWindow" class="form-control">
     </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2 d-flex align-items-center">
@@ -117,7 +117,7 @@
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2">
         <label class="col-form-label">{{ index .tab "compatibilityMode" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipCompatibilityMode" }}"></i>
-        <select name="partnerPeSITcompatibilityMode" id="partnerPeSITcompatibilityMode" class="form-select">
+        <select name="protoConfigPeSITcompatibilityMode" id="protoConfigPeSITcompatibilityMode" class="form-select">
             <option value="" disabled selected>{{ index .tab "selectCompatibilityMode" }}</option>
             {{ range .CompatibilityModePeSIT }}
                 <option value="{{ . }}"> {{ if eq . "axway" }}{{ index $.tab "standardParameterPesit" }}{{ else if eq . "none" }}{{ index $.tab "noneStandardParameterPesit" }}{{ else }}{{ . }}{{ end }}</option>
@@ -127,7 +127,7 @@
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2">
         <label class="col-form-label">{{ index .tab "maxMessageSize" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMaxMessageSize" }}"></i>
-        <input type="text" name="partnerPeSITmaxMessageSize" class="form-control">
+        <input type="text" name="protoConfigPeSITmaxMessageSize" class="form-control">
     </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2 d-flex align-items-center">
@@ -140,7 +140,7 @@
         <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
         <div class="form-input mt-2">
             <label class="col-form-label">{{ index .tab "minTLSVersion" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMinPesitTLSVersion" }}"></i>
-            <select name="partnerPeSIT-TLSminTLSVersion" id="partnerPeSIT-TLSminTLSVersion" class="form-select">
+            <select name="protoConfigPeSIT-TLSminTLSVersion" id="protoConfigPeSIT-TLSminTLSVersion" class="form-select">
                 <option value="" disabled selected>{{ index .tab "selectTLSVersion" }}</option>
                 {{ range .TLSVersions }}
                     <option value="{{ . }}">{{ . }}</option>
