--- a/pkg/admin/gui/front-end/html/partner_authentication_page.html
+++ b/pkg/admin/gui/front-end/html/partner_authentication_page.html
@@ -115,7 +115,7 @@
                 {{ if eq .credentialPartnerFound "false" }}
                     <div class="invalid-feedback d-block mt-2">{{ index .tab "credentialPartnerNotFound" }}</div>
                 {{ else if eq .credentialPartnerFound "true" }}
-                    <button id="resetBtn" type="button" class="btn btn-secondary me-2 reset-btn" onclick="window.location='partner_authentication?partnerID={{ .partner.ID }}'"><i class="bi bi-x fs"></i></button>
+                    <button id="resetBtn" type="button" class="btn reset-btn" onclick="window.location='partner_authentication?partnerID={{ .partner.ID }}'"><i class="bi bi-x fs"></i></button>
                 {{ end }}
             <input class="navbar-partner form-control {{ if eq .credentialPartnerFound "false" }}is-invalid{{ end }}" type="search" placeholder="{{ index .tab "search" }}" name="search" id="search" autocomplete="off">
             <button class="btn btn-primary ms-2 btn-navbar" type="submit">{{ index .tab "search" }}</button>
@@ -143,7 +143,7 @@
               <td>{{ .Type }}</td>
               <td>
                 {{ if ne .Type "r66_legacy_certificate" }}
-                <button class="btn btn-outline-primary protoConfig-btn" type="button" data-bs-toggle="modal" data-bs-target="#valueTypeModal_{{ .ID }}">
+                <button class="btn btn-outline-primary modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#valueTypeModal_{{ .ID }}">
                 ...
                 </button>
                 <div class="modal fade" id="valueTypeModal_{{ .ID }}" tabindex="-1" aria-labelledby="valueTypeModalLabel_{{ .ID }}" aria-hidden="true">
