--- a/pkg/admin/gui/front-end/html/remote_account_management_page.html
+++ b/pkg/admin/gui/front-end/html/remote_account_management_page.html
@@ -88,7 +88,7 @@
                 {{ if eq .remoteAccountFound "false" }}
                     <div class="invalid-feedback d-block mt-2">{{ index .tab "remoteAccountNotFound" }}</div>
                 {{ else if eq .remoteAccountFound "true" }}
-                    <button id="resetBtn" type="button" class="btn btn-secondary ms-2 reset-btn" onclick="window.location='remote_account_management?partnerID={{ .partner.ID }}'"><i class="bi bi-x fs"></i></button>
+                    <button id="resetBtn" type="button" class="btn reset-btn" onclick="window.location='remote_account_management?partnerID={{ .partner.ID }}'"><i class="bi bi-x fs"></i></button>
                 {{ end }}
                 <input class="navbar-partner form-control {{ if eq .remoteAccountFound "false" }}is-invalid{{ end }}" type="search" placeholder="{{ index .tab "search" }}" name="search" id="search" autocomplete="off">
                 <button class="btn btn-primary ms-2 btn-navbar" type="submit">{{ index .tab "search" }}</button>
