--- a/pkg/admin/gui/front-end/html/addProtoConfig.html
+++ b/pkg/admin/gui/front-end/html/addProtoConfig.html
@@ -1,14 +1,14 @@
 {{ define "addR66" }}
 <div id="protoConfig_r66" class="protoConfigBlock" style="display:none;">
     <hr class="mt-2" style="border-top: 1px solid #ababab;">
-    <div class="mt-4 mb-2"><strong>{{ index .tab "protocolConfiguration" }} :</strong><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocolConfiguration" }}"></i></div>
+    <div class="mt-4 mb-2"><strong>{{ index .tab "protocolConfiguration" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocolConfiguration" }}"></i> :</strong></div>
     <div class="form-input mt-4">
-        <label class="col-form-label">{{ index .tab "serverLogin" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipServerLogin" }}"></i>
+        <label class="col-form-label">{{ index .tab "serverLogin" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipServerLogin" }}"></i> :</label>
         <input type="text" name="protoConfigR66serverLogin" class="form-control">
     </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
     <div class="form-input mt-4">
-        <label class="col-form-label">{{ index .tab "blockSize" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipBlockSize" }}"></i>
+        <label class="col-form-label">{{ index .tab "blockSize" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipBlockSize" }}"></i> :</label>
         <input type="text" name="protoConfigR66blockSize" class="form-control">
     </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
@@ -31,7 +31,7 @@
 {{ define "addFtp" }}
 <div id="protoConfig_ftp" class="protoConfigBlock" style="display:none;">
     <hr class="mt-2" style="border-top: 1px solid #ababab;">
-    <div class="mt-4 mb-2"><strong>{{ index .tab "protocolConfiguration" }} :</strong><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocolConfiguration" }}"></i></div>
+    <div class="mt-4 mb-2"><strong>{{ index .tab "protocolConfiguration" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocolConfiguration" }}"></i> :</strong></div>
     <div class="form-input mt-4 d-flex align-items-center">
         <label class="col-form-label me-3">{{ index .tab "disableActiveMode" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipDisableActiveMode" }}"></i> :</label>
         <div class="form-check form-check-inline">
@@ -55,7 +55,7 @@
         </div>
         <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
         <div class="form-input">
-            <label class="col-form-label">{{ index .tab "minTLSVersion" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMinFtpsTLSVersion" }}"></i>
+            <label class="col-form-label">{{ index .tab "minTLSVersion" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMinFtpsTLSVersion" }}"></i> :</label>
             <select name="protoConfigFTPSminTLSVersion" id="protoConfigFTPSminTLSVersion" class="form-select">
                 <option value="" disabled selected>{{ index .tab "selectTLSVersion" }}</option>
                 {{ range .TLSVersions }}
@@ -78,9 +78,9 @@
 {{ define "addPesit" }}
 <div id="protoConfig_pesit" class="protoConfigBlock" style="display:none;">
     <hr class="mt-2" style="border-top: 1px solid #ababab;">
-    <div class="mt-4 mb-2"><strong>{{ index .tab "protocolConfiguration" }} :</strong><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocolConfiguration" }}"></i></div>
+    <div class="mt-4 mb-2"><strong>{{ index .tab "protocolConfiguration" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocolConfiguration" }}"></i> :</strong></div>
     <div class="form-input mt-4">
-        <label class="col-form-label">{{ index .tab "login" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipLogin" }}"></i>
+        <label class="col-form-label">{{ index .tab "login" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipLogin" }}"></i> :</label>
         <input type="text" name="protoConfigPeSITlogin" class="form-control">
     </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
@@ -99,12 +99,12 @@
     </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2">
-        <label class="col-form-label">{{ index .tab "checkpointSize" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipCheckpointSize" }}"></i>
+        <label class="col-form-label">{{ index .tab "checkpointSize" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipCheckpointSize" }}"></i> :</label>
         <input type="text" name="protoConfigPeSITcheckpointSize" class="form-control">
     </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2">
-        <label class="col-form-label">{{ index .tab "checkpointWindow" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipCheckpointWindow" }}"></i>
+        <label class="col-form-label">{{ index .tab "checkpointWindow" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipCheckpointWindow" }}"></i> :</label>
         <input type="text" name="protoConfigPeSITcheckpointWindow" class="form-control">
     </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
@@ -116,7 +116,7 @@
     </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2">
-        <label class="col-form-label">{{ index .tab "compatibilityMode" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipCompatibilityMode" }}"></i>
+        <label class="col-form-label">{{ index .tab "compatibilityMode" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipCompatibilityMode" }}"></i> :</label>
         <select name="protoConfigPeSITcompatibilityMode" id="protoConfigPeSITcompatibilityMode" class="form-select">
             <option value="" disabled selected>{{ index .tab "selectCompatibilityMode" }}</option>
             {{ range .CompatibilityModePeSIT }}
@@ -126,7 +126,7 @@
     </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2">
-        <label class="col-form-label">{{ index .tab "maxMessageSize" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMaxMessageSize" }}"></i>
+        <label class="col-form-label">{{ index .tab "maxMessageSize" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMaxMessageSize" }}"></i> :</label>
         <input type="text" name="protoConfigPeSITmaxMessageSize" class="form-control">
     </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
@@ -139,7 +139,7 @@
     <div id="pesit-tlsForm">
         <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
         <div class="form-input mt-2">
-            <label class="col-form-label">{{ index .tab "minTLSVersion" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMinPesitTLSVersion" }}"></i>
+            <label class="col-form-label">{{ index .tab "minTLSVersion" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMinPesitTLSVersion" }}"></i> :</label>
             <select name="protoConfigPeSIT-TLSminTLSVersion" id="protoConfigPeSIT-TLSminTLSVersion" class="form-select">
                 <option value="" disabled selected>{{ index .tab "selectTLSVersion" }}</option>
                 {{ range .TLSVersions }}
@@ -154,10 +154,9 @@
 {{ define "addSftp" }}
 <div id="protoConfig_sftp" class="protoConfigBlock" style="display:none;">
     <hr class="mt-2" style="border-top: 1px solid #ababab;">
-    <div class="mt-4 mb-2"><strong>{{ index .tab "protocolConfiguration" }} :</strong><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocolConfiguration" }}"></i></div>
+    <div class="mt-4 mb-2"><strong>{{ index .tab "protocolConfiguration" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocolConfiguration" }}"></i> :</strong></div>
     <div class="form-input mt-4">
-        <label class="col-form-label">{{ index .tab "keyExchanges" }} :</label>
-        <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipKeyExchanges" }}"></i>
+        <label class="col-form-label">{{ index .tab "keyExchanges" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipKeyExchanges" }}"></i> :</label>
         <div id="keyExchangesContainer">
             <div class="input-group mb-2">
                 <select name="keyExchanges[]" class="form-select">
@@ -175,8 +174,7 @@
     </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2">
-        <label class="col-form-label">{{ index .tab "ciphers" }} :</label>
-        <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipCiphers" }}"></i>
+        <label class="col-form-label">{{ index .tab "ciphers" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipCiphers" }}"></i> :</label>
         <div id="ciphersContainer">
             <div class="input-group mb-2">
                 <select name="ciphers[]" class="form-select">
@@ -194,8 +192,7 @@
     </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2">
-        <label class="col-form-label">{{ index .tab "macs" }} :</label>
-        <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMacs" }}"></i>
+        <label class="col-form-label">{{ index .tab "macs" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMacs" }}"></i> :</label>
         <div id="macsContainer">
             <div class="input-group mb-2">
                 <select name="macs[]" class="form-select">
