--- a/pkg/admin/gui/front-end/html/local_account_management_page.html
+++ b/pkg/admin/gui/front-end/html/local_account_management_page.html
@@ -15,32 +15,32 @@
             <button type="button" class="btn-close error-close-btn" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     {{ end }}
-    {{ if .partner }}
+    {{ if .server }}
       <div class="d-flex align-items-center justify-content-between">
-        <h2 class="mb-0">{{ index .tab "title" }} : {{ .partner.Name }}</h2>
-        <button class="btn btn-outline-secondary ms-3 back-btn" type="button" onclick="window.location='partner_management'">
+        <h2 class="mb-0">{{ index .tab "title" }} : {{ .server.Name }}</h2>
+        <button class="btn btn-outline-secondary ms-3 back-btn" type="button" onclick="window.location='server_management'">
           <i class="bi bi-arrow-left"></i>
         </button>
       </div>
       <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
 
-      {{ if contains .myPermission.Partners "w" }}
-        <button class="btn btn-primary mb-3 btn-add" type="button" data-bs-toggle="modal" data-bs-target="#addRemoteAccountModal">
-          {{ index .tab "addRemoteAccount" }}
+      {{ if contains .myPermission.Servers "w" }}
+        <button class="btn btn-primary mb-3 btn-add" type="button" data-bs-toggle="modal" data-bs-target="#addLocalAccountModal">
+          {{ index .tab "addLocalAccount" }}
         </button>
-        <div class="modal fade" id="addRemoteAccountModal" tabindex="-1" aria-labelledby="addRemoteAccountModalLabel" aria-hidden="true">
+        <div class="modal fade" id="addLocalAccountModal" tabindex="-1" aria-labelledby="addLocalAccountModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-lg">
             <div class="modal-content">
               <form method="post" class="p-3 border rounded bg-light">
-                <input type="hidden" name="partnerID" value="{{ .partner.ID }}">
+                <input type="hidden" name="serverID" value="{{ .server.ID }}">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="addRemoteAccountModalLabel">{{ index .tab "addRemoteAccount" }}</h5>
+                  <h5 class="modal-title" id="addLocalAccountModalLabel">{{ index .tab "addLocalAccount" }}</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                   <div class="form-input">
                     <label class="col-form-label">{{ index .tab "loginStr" }} :</label>
-                    <input type="text" name="addRemoteAccountLogin" class="form-control" required>
+                    <input type="text" name="addLocalAccountLogin" class="form-control" required>
                   </div>
                 </div>
                 <div class="modal-footer">
@@ -52,13 +52,13 @@
           </div>
         </div>
       {{ end }}
-      {{ if contains .myPermission.Partners "r" }}
+      {{ if contains .myPermission.Servers "r" }}
         <button class="btn btn-primary mb-3 ms-1-5 btn-filter" type="button" data-bs-toggle="collapse" data-bs-target="#filterCollapse" aria-expanded="false" aria-controls="filterCollapse">
         {{ index .tab "filter" }}
         </button>
         <div class="collapse" id="filterCollapse">
         <form method="get" class="p-3 border rounded bg-light">
-          <input type="hidden" name="partnerID" value="{{ $.partner.ID }}">
+          <input type="hidden" name="serverID" value="{{ $.server.ID }}">
             <label class="ms-3">{{ index .tab "sort" }}:
             <select name="orderAsc" class="form-select d-inline w-auto">
                 <option value="true" {{ if .filter.OrderAsc }}selected{{ end }}>A → Z</option>
@@ -77,26 +77,26 @@
             </label>
             <div style="float:right">
               <button id="applyBtn" type="submit" class="btn btn-success">{{ index .tab "apply" }}</button>
-              <button id="resetBtn" type="button" class="btn btn-secondary ms-2" onclick="window.location='remote_account_management?partnerID={{ .partner.ID }}'">{{ index .tab "reset" }}</button>
+              <button id="resetBtn" type="button" class="btn btn-secondary ms-2" onclick="window.location='local_account_management?serverID={{ .server.ID }}'">{{ index .tab "reset" }}</button>
             </div>
         </form>
         </div>
         <nav class="navbar navbar-light bg-light">
-            <input type="hidden" id="pageType" value="remoteAccount">
+            <input type="hidden" id="pageType" value="localAccount">
             <form method="get" class="d-flex ms-auto position-relative" onsubmit="return true">
-                <input type="hidden" name="partnerID" value="{{ $.partner.ID }}">
-                {{ if eq .remoteAccountFound "false" }}
-                    <div class="invalid-feedback d-block mt-2">{{ index .tab "remoteAccountNotFound" }}</div>
-                {{ else if eq .remoteAccountFound "true" }}
-                    <button id="resetBtn" type="button" class="btn reset-btn" onclick="window.location='remote_account_management?partnerID={{ .partner.ID }}'"><i class="bi bi-x fs"></i></button>
+                <input type="hidden" name="serverID" value="{{ $.server.ID }}">
+                {{ if eq .localAccountFound "false" }}
+                    <div class="invalid-feedback d-block mt-2">{{ index .tab "localAccountNotFound" }}</div>
+                {{ else if eq .localAccountFound "true" }}
+                    <button id="resetBtn" type="button" class="btn reset-btn" onclick="window.location='local_account_management?serverID={{ .server.ID }}'"><i class="bi bi-x fs"></i></button>
                 {{ end }}
-                <input class="navbar-partner form-control {{ if eq .remoteAccountFound "false" }}is-invalid{{ end }}" type="search" placeholder="{{ index .tab "search" }}" name="search" id="search" autocomplete="off">
+                <input class="navbar-partner form-control {{ if eq .localAccountFound "false" }}is-invalid{{ end }}" type="search" placeholder="{{ index .tab "search" }}" name="search" id="search" autocomplete="off">
                 <button class="btn btn-primary ms-2 btn-navbar" type="submit">{{ index .tab "search" }}</button>
                 <ul id="autocomplete" class="list-group"></ul>
             </form>
         </nav>
       {{ end }}
-      {{ if contains .myPermission.Partners "r" }}
+      {{ if contains .myPermission.Servers "r" }}
       <table class="table table-sm align-middle mb-4 rounded-3 mt-3">
         <thead class="table-light">
           <tr>
@@ -106,32 +106,32 @@
           </tr>
         </thead>
         <tbody>
-          {{ range .remoteAccounts }}
+          {{ range .localAccounts }}
           <tr>
             <td><i class="bi bi-person-fill"></i></td>
             <td><strong>{{ .Login }}</strong></td>
             <td class="text-end">
-                <a class="btn btn-outline-warning btn-sm me-1" href="remote_account_authentication?partnerID={{ $.partner.ID }}&accountID={{ .ID }}" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "tooltipRemoteAccountAuthentication" }}">
+                <a class="btn btn-outline-warning btn-sm me-1" href="local_account_authentication?serverID={{ $.server.ID }}&accountID={{ .ID }}" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "tooltipLocalAccountAuthentication" }}">
                   <i class="bi bi-shield-lock"></i>
                 </a>
-              {{ if contains $.myPermission.Partners "w" }}
-                <button class="btn btn-outline-primary btn-sm me-1" data-bs-toggle="modal" data-bs-target="#editRemoteAccountModal_{{ .ID }}">
+              {{ if contains $.myPermission.Servers "w" }}
+                <button class="btn btn-outline-primary btn-sm me-1" data-bs-toggle="modal" data-bs-target="#editLocalAccountModal_{{ .ID }}">
                   <i class="bi bi-pencil"></i>
                 </button>
-                <div class="modal fade" id="editRemoteAccountModal_{{ .ID }}" tabindex="-1" aria-labelledby="editRemoteAccountModalLabel_{{ .ID }}" aria-hidden="true">
+                <div class="modal fade" id="editLocalAccountModal_{{ .ID }}" tabindex="-1" aria-labelledby="editLocalAccountModalLabel_{{ .ID }}" aria-hidden="true">
                   <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                       <form method="post" class="p-3 border rounded bg-light">
-                        <input type="hidden" name="partnerID" value="{{ $.partner.ID }}">
-                        <input type="hidden" name="editRemoteAccountID" value="{{ .ID }}">
+                        <input type="hidden" name="serverID" value="{{ $.server.ID }}">
+                        <input type="hidden" name="editLocalAccountID" value="{{ .ID }}">
                         <div class="modal-header">
-                          <h5 class="modal-title" id="editRemoteAccountModalLabel_{{ .ID }}">{{ index $.tab "edit" }}: {{ .Login }}</h5>
+                          <h5 class="modal-title" id="editLocalAccountModalLabel_{{ .ID }}">{{ index $.tab "edit" }}: {{ .Login }}</h5>
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
                           <div class="form-input">
                             <label class="col-form-label">{{ index $.tab "loginStr" }} :</label>
-                            <input type="text" name="editRemoteAccountLogin" class="form-control" required value="{{ .Login }}">
+                            <input type="text" name="editLocalAccountLogin" class="form-control" required value="{{ .Login }}">
                           </div>
                         </div>
                         <div class="modal-footer">
@@ -143,10 +143,10 @@
                   </div>
                 </div>
               {{ end }}
-              {{ if contains $.myPermission.Partners "d" }}
+              {{ if contains $.myPermission.Servers "d" }}
                 <form method="post" class="d-inline">
-                  <input type="hidden" name="partnerID" value="{{ $.partner.ID }}">
-                  <input type="hidden" name="deleteRemoteAccount" value="{{ .ID }}">
+                  <input type="hidden" name="serverID" value="{{ $.server.ID }}">
+                  <input type="hidden" name="deleteLocalAccount" value="{{ .ID }}">
                   <button type="submit" class="btn btn-outline-danger btn-sm" onclick="return confirm('Confirm delete?')">
                     <i class="bi bi-trash"></i>
                   </button>
@@ -170,10 +170,10 @@
       </form>
       {{ end }}
     {{ else }}
-      <div class="alert alert-warning mt-4">{{ index .tab "partnerAuthenticationNotFound" }}</div>
+      <div class="alert alert-warning mt-4">{{ index .tab "serverAuthenticationNotFound" }}</div>
     {{ end }}
 {{ end }}
 
-{{ define "remote_account_management_page" }}
+{{ define "local_account_management_page" }}
   {{ template "index" . }}
 {{ end }}
