--- a/pkg/admin/gui/front-end/html/partner_management_page.html
+++ b/pkg/admin/gui/front-end/html/partner_management_page.html
@@ -44,7 +44,7 @@
               </div>
               <hr class="mt-2" style="border-top: 1px solid #ababab;">
               <div class="form-input">
-                <label class="col-form-label">{{ index .tab "protocol" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i>
+                <label class="col-form-label">{{ index .tab "protocol" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i> :</label>
                 <select name="addPartnerProtocol" id="addPartnerProtocol" class="form-select protocolConfiguration-select" required>
                   <option value="" disabled selected>{{ index .tab "selectProto" }}</option>
                   <option value="r66">R66</option>
@@ -60,12 +60,12 @@
               </div>
               <hr class="mt-2" style="border-top: 1px solid #ababab;">
               <div class="form-input">
-                  <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "host" }}) :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i>
+                  <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "host" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i> :</label>
                   <input type="text" name="addPartnerHost" class="form-control" required>
               </div>
               <hr class="mt-2" style="border-top: 1px solid #ababab;">
                 <div class="form-input">
-                    <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "port" }}) :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i>
+                    <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "port" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i> :</label>
                   <input type="text" name="addPartnerPort" class="form-control" required>
               </div>
               {{ template "addR66" . }}
@@ -186,7 +186,7 @@
               <td>
               {{ if and (ne .Protocol "http") (ne .Protocol "https") }}
               <button class="btn btn-outline-primary modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#protoConfigModal_{{ .ID }}">
-              ...
+                <i class="bi bi-gear-wide-connected"></i>
               </button>
               <div class="modal fade" id="protoConfigModal_{{ .ID }}" tabindex="-1" aria-labelledby="protoConfigModalLabel_{{ .ID }}" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
@@ -246,7 +246,7 @@
                       </div>
                       <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
                       <div class="form-group mt-4">
-                        <label class="col-form-label">{{ index $.tab "protocol" }} : <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i></label>
+                        <label class="col-form-label">{{ index $.tab "protocol" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i> :</label>
                         <select name="editPartnerProtocol" class="form-select protocolConfiguration-select" required>
                           <option value="r66" {{ if eq .Protocol "r66" }}selected{{ end }}>R66</option>
                           <option value="r66-tls" {{ if eq .Protocol "r66-tls" }}selected{{ end }}>R66-TLS</option>
@@ -261,12 +261,12 @@
                       </div>
                       <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
                       <div class="form-group mt-4">
-                          <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "host" }}) : <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i></label>
+                          <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "host" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i> :</label>
                           <input type="text" name="editPartnerHost" class="form-control" required value="{{ .Address.Host }}">
                       </div>
                       <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
                       <div class="form-group mt-4">
-                          <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "port" }}) : <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i></label>
+                          <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "port" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i> :</label>
                           <input type="text" name="editPartnerPort" class="form-control" required value="{{ .Address.Port }}">
                       </div>
                       {{ template "editR66" (dict "tab" $.tab "ProtoConfig" .ProtoConfig) }}
