--- a/pkg/admin/gui/front-end/html/server_management_page.html
+++ b/pkg/admin/gui/front-end/html/server_management_page.html
@@ -45,8 +45,7 @@
                 <hr class="mt-2" style="border-top: 1px solid #ababab;">
 
                 <div class="form-input">
-                <label class="col-form-label">{{ index .tab "protocol" }} :</label>
-                <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i>
+                <label class="col-form-label">{{ index .tab "protocol" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i> :</label>
                 <select name="addServerProtocol" id="addServerProtocol" class="form-select protocolConfiguration-select" required>
                     <option value="" disabled selected>{{ index .tab "selectProto" }}</option>
                     <option value="r66">R66</option>
@@ -63,15 +62,13 @@
                 <hr class="mt-2" style="border-top: 1px solid #ababab;">
 
                 <div class="form-input">
-                <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "host" }}) :</label>
-                <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i>
+                <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "host" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i> :</label>
                 <input type="text" name="addServerHost" class="form-control" required>
                 </div>
                 <hr class="mt-2" style="border-top: 1px solid #ababab;">
 
                 <div class="form-input">
-                <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "port" }}) :</label>
-                <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i>
+                <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "port" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i> :</label>
                 <input type="text" name="addServerPort" class="form-control" required>
                 </div>
                 <hr class="mt-2" style="border-top: 1px solid #ababab;">
@@ -209,36 +206,49 @@
             <td>{{ .Address.Host }}</td>
             <td>{{ .Address.Port }}</td>
             <td>
-                <button class="btn btn-outline-primary modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#directoriesModal_{{ .ID }}">
-                    ...
-                </button>
-                <div class="modal fade" id="directoriesModal_{{ .ID }}" tabindex="-1" aria-labelledby="directoriesModalLabel_{{ .ID }}" aria-hidden="true">
-                    <div class="modal-dialog modal-lg">
-                    <div class="modal-content p-3 border rounded bg-light">
-                        <div class="modal-header">
-                        <h5 class="modal-title" id="directoriesModalLabel_{{ .ID }}">
-                            {{ index $.tab "directoryConfiguration" }} : {{ .Name }}
-                        </h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                        <ul class="list-group">
-                            <li class="list-group-item"><strong>{{ index $.tab "rootDir" }}:</strong> {{ .RootDir }}</li>
-                            <li class="list-group-item"><strong>{{ index $.tab "receiveDir" }}:</strong> {{ .ReceiveDir }}</li>
-                            <li class="list-group-item"><strong>{{ index $.tab "sendDir" }}:</strong> {{ .SendDir }}</li>
-                            <li class="list-group-item"><strong>{{ index $.tab "tmpReceiveDir" }}:</strong> {{ .TmpReceiveDir }}</li>
-                        </ul>
-                        </div>
-                        <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ index $.tab "close" }}</button>
-                        </div>
+              <button class="btn btn-outline-primary modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#directoriesModal_{{ .ID }}">
+                <i class="bi bi-folder2-open"></i>
+              </button>
+              <div class="modal fade" id="directoriesModal_{{ .ID }}" tabindex="-1" aria-labelledby="directoriesModalLabel_{{ .ID }}" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-content p-3 border rounded bg-light">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="directoriesModalLabel_{{ .ID }}">
+                        {{ index $.tab "directoryConfiguration" }} : {{ .Name }}
+                      </h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
+                    <div class="modal-body">
+                      <div class="form-input mb-2">
+                        <label class="col-form-label">{{ index $.tab "rootDir" }} :</label>
+                        <input type="text" class="form-control-plaintext" value="{{ .RootDir }}" readonly>
+                      </div>
+                      <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
+                      <div class="form-input mb-2">
+                        <label class="col-form-label">{{ index $.tab "receiveDir" }} :</label>
+                        <input type="text" class="form-control-plaintext" value="{{ .ReceiveDir }}" readonly>
+                      </div>
+                      <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
+                      <div class="form-input mb-2">
+                        <label class="col-form-label">{{ index $.tab "sendDir" }} :</label>
+                        <input type="text" class="form-control-plaintext" value="{{ .SendDir }}" readonly>
+                      </div>
+                      <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
+                      <div class="form-input mb-2">
+                        <label class="col-form-label">{{ index $.tab "tmpReceiveDir" }} :</label>
+                        <input type="text" class="form-control-plaintext" value="{{ .TmpReceiveDir }}" readonly>
+                      </div>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ index $.tab "close" }}</button>
+                    </div>
+                  </div>
                 </div>
-            </div>
+              </div>
             </td>
             <td>
-                <button class="btn btn-outline-primary modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#protoConfigModal_{{ .ID }}">
-                    ...
+              <button class="btn btn-outline-primary modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#protoConfigModal_{{ .ID }}">
+                    <i class="bi bi-gear-wide-connected"></i>
                 </button>
                 <div class="modal fade" id="protoConfigModal_{{ .ID }}" tabindex="-1" aria-labelledby="protoConfigModalLabel_{{ .ID }}" aria-hidden="true">
                     <div class="modal-dialog modal-lg">
@@ -269,8 +279,14 @@
                     </div>
                     </div>
                 </div>
-                </td>
+              </td>
             <td class="text-end">
+                <a class="btn btn-outline-warning btn-sm me-1" href="server_authentication?serverID={{ .ID }}" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "tooltipServerAuthentication" }}">
+                  <i class="bi bi-shield-lock"></i>
+                </a>
+                <a class="btn btn-outline-info btn-sm me-1" href="local_account_management?serverID={{ .ID }}" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "tooltipLocalAccountManagement" }}">
+                  <i class="bi bi-person-gear"></i>
+                </a>
                 {{ if contains $.myPermission.Servers "w" }}
                 <button class="btn btn-outline-primary btn-sm me-1" data-bs-toggle="modal" data-bs-target="#editServerModal_{{ .ID }}">
                     <i class="bi bi-pencil"></i>
@@ -291,7 +307,7 @@
                             </div>
                             <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
                             <div class="form-group mt-4">
-                            <label class="col-form-label">{{ index $.tab "protocol" }} : <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i></label>
+                            <label class="col-form-label">{{ index $.tab "protocol" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i> :</label>
                             <select name="editServerProtocol" class="form-select protocolConfiguration-select" required>
                                 <option value="r66" {{ if eq .Protocol "r66" }}selected{{ end }}>R66</option>
                                 <option value="r66-tls" {{ if eq .Protocol "r66-tls" }}selected{{ end }}>R66-TLS</option>
@@ -306,12 +322,12 @@
                             </div>
                             <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
                             <div class="form-group mt-4">
-                            <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "host" }}) : <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i></label>
+                            <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "host" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i> :</label>
                             <input type="text" name="editServerHost" class="form-control" required value="{{ .Address.Host }}">
                             </div>
                             <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
                             <div class="form-group mt-4">
-                            <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "port" }}) : <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i></label>
+                            <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "port" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i> :</label>
                             <input type="text" name="editServerPort" class="form-control" required value="{{ .Address.Port }}">
                             </div>
                             <div class="form-group mt-4">
