feat/add Local Client Management page

--- a/pkg/admin/gui/front-end/html/user_management_page.html
+++ b/pkg/admin/gui/front-end/html/user_management_page.html
@@ -219,7 +219,7 @@
                 {{ else if eq .userFound "true" }}
                     <button id="resetBtn" type="button" class="btn reset-btn" onclick="window.location='user_management'"><i class="bi bi-x fs"></i></button>
                 {{ end }}
-            <input class="navbar-user form-control {{ if eq .userFound "false" }}is-invalid{{ end }}" type="search" placeholder="{{ index .tab "search" }}" name="search" id="search" autocomplete="off">
+            <input class="navbar-partner form-control {{ if eq .userFound "false" }}is-invalid{{ end }}" type="search" placeholder="{{ index .tab "search" }}" name="search" id="search" autocomplete="off">
             <button class="btn btn-primary ms-2 btn-navbar" type="submit">{{ index .tab "search" }}</button>
             <ul id="autocomplete" class="list-group"></ul>
             </form>
