--- a/pkg/admin/gui/front-end/html/home_page.html
+++ b/pkg/admin/gui/front-end/html/home_page.html
@@ -32,10 +32,10 @@
     </a>
   </div>
   <div class="col-sm-4">
-    <a href="local_customer_management.html" class="text-decoration-none text-dark">
+    <a href="local_client_management" class="text-decoration-none text-dark">
       <div class="card text-center p-3">
         <i class="bi bi-people-fill fs-2"></i>
-        <div>{{ index .tab "local_customer_management" }}</div>
+        <div>{{ index .tab "local_client_management" }}</div>
       </div>
     </a>
   </div>
