--- a/pkg/admin/gui/front-end/html/local_client_management_page.html
+++ b/pkg/admin/gui/front-end/html/local_client_management_page.html
@@ -25,28 +25,28 @@
   <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
 
     {{ if contains .myPermission.Servers "w" }}
-    <button class="btn btn-primary mb-3 btn-add" type="button" data-bs-toggle="modal" data-bs-target="#addServerModal">
-        {{ index .tab "addServerTitle" }}
+    <button class="btn btn-primary mb-3 btn-add" type="button" data-bs-toggle="modal" data-bs-target="#addLocalClientModal">
+        {{ index .tab "addLocalClientTitle" }}
     </button>
-    <div class="modal fade" id="addServerModal" tabindex="-1" aria-labelledby="addServerModalLabel" aria-hidden="true">
+    <div class="modal fade" id="addLocalClientModal" tabindex="-1" aria-labelledby="addLocalClientModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <form method="post" class="p-3 border rounded bg-light">
             <div class="modal-header">
-                <h5 class="modal-title" id="addServerModalLabel">{{ index .tab "addServerTitle" }}</h5>
+                <h5 class="modal-title" id="addLocalClientModalLabel">{{ index .tab "addLocalClientTitle" }}</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
 
                 <div class="form-input">
-                <label class="col-form-label">{{ index .tab "servers" }} :</label>
-                <input type="text" name="addServerName" class="form-control" required>
+                <label class="col-form-label">{{ index .tab "localClientStr" }} :</label>
+                <input type="text" name="addLocalClientName" class="form-control" required>
                 </div>
                 <hr class="mt-2" style="border-top: 1px solid #ababab;">
 
                 <div class="form-input">
                 <label class="col-form-label">{{ index .tab "protocol" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i> :</label>
-                <select name="addServerProtocol" id="addServerProtocol" class="form-select protocolConfiguration-select" required>
+                <select name="addLocalClientProtocol" id="addLocalClientProtocol" class="form-select protocolConfiguration-select" required>
                     <option value="" disabled selected>{{ index .tab "selectProto" }}</option>
                     <option value="r66">R66</option>
                     <option value="r66-tls">R66-TLS</option>
@@ -63,31 +63,13 @@
 
                 <div class="form-input">
                 <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "host" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i> :</label>
-                <input type="text" name="addServerHost" class="form-control" required>
+                <input type="text" name="addLocalClientHost" class="form-control" required>
                 </div>
                 <hr class="mt-2" style="border-top: 1px solid #ababab;">
 
                 <div class="form-input">
                 <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "port" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i> :</label>
-                <input type="text" name="addServerPort" class="form-control" required>
-                </div>
-                <hr class="mt-2" style="border-top: 1px solid #ababab;">
-
-                <div class="form-input">
-                <label class="col-form-label">{{ index .tab "rootDir" }} :</label>
-                <input type="text" name="addServerRootDir" class="form-control" required>
-                </div>
-                <div class="form-input">
-                <label class="col-form-label">{{ index .tab "receiveDir" }} :</label>
-                <input type="text" name="addServerReceiveDir" class="form-control" required>
-                </div>
-                <div class="form-input">
-                <label class="col-form-label">{{ index .tab "sendDir" }} :</label>
-                <input type="text" name="addServerSendDir" class="form-control" required>
-                </div>
-                <div class="form-input">
-                <label class="col-form-label">{{ index .tab "tmpReceiveDir" }} :</label>
-                <input type="text" name="addServerTmpReceiveDir" class="form-control" required>
+                <input type="text" name="addLocalClientPort" class="form-control" required>
                 </div>
                 {{ template "addR66" . }}
                 {{ template "addSftp" . }}
@@ -128,7 +110,7 @@
         </label>
         <div style="float:right">
           <button id="applyBtn" type="submit" class="btn btn-success">{{ index .tab "apply" }}</button>
-          <button id="resetBtn" type="button" class="btn btn-secondary ms-2" onclick="window.location='server_management'">{{ index .tab "reset" }}</button>
+          <button id="resetBtn" type="button" class="btn btn-secondary ms-2" onclick="window.location='local_client_management'">{{ index .tab "reset" }}</button>
         </div>
         <div class="mt-3">
             <label class="ms-3 me-3">{{ index .tab "protocol" }}: </label>
@@ -172,14 +154,14 @@
       </form>
     </div>
     <nav class="navbar navbar-light bg-light">
-      <input type="hidden" id="pageType" value="servers">
+      <input type="hidden" id="pageType" value="LocalClients">
       <form method="get" class="d-flex ms-auto position-relative" onsubmit="return true">
-        {{ if eq .serverFound "false" }}
-          <div class="invalid-feedback d-block mt-2">{{ index .tab "ServerNotFound" }}</div>
-        {{ else if eq .serverFound "true" }}
-          <button id="resetBtn" type="button" class="btn reset-btn" onclick="window.location='server_management'"><i class="bi bi-x fs"></i></button>
+        {{ if eq .localClientFound "false" }}
+          <div class="invalid-feedback d-block mt-2">{{ index .tab "LocalClientNotFound" }}</div>
+        {{ else if eq .localClientFound "true" }}
+          <button id="resetBtn" type="button" class="btn reset-btn" onclick="window.location='local_client_management'"><i class="bi bi-x fs"></i></button>
         {{ end }}
-        <input class="navbar-partner form-control {{ if eq .serverFound "false" }}is-invalid{{ end }}" type="search" placeholder="{{ index .tab "search" }}" name="search" id="search" autocomplete="off">
+        <input class="navbar-partner form-control {{ if eq .localClientFound "false" }}is-invalid{{ end }}" type="search" placeholder="{{ index .tab "search" }}" name="search" id="search" autocomplete="off">
         <button class="btn btn-primary ms-2 btn-navbar" type="submit">{{ index .tab "search" }}</button>
         <ul id="autocomplete" class="list-group"></ul>
       </form>
@@ -188,64 +170,22 @@
       <thead class="table-light">
         <tr>
             <th></th>
-            <th>{{ index .tab "servers" }}</th>
+            <th>{{ index .tab "localClientStr" }}</th>
             <th>{{ index .tab "protocol" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i></th>
             <th>{{ index .tab "address" }} ({{ index .tab "host" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i></th>
             <th>{{ index .tab "address" }} ({{ index .tab "port" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i></th>
-            <th>{{ index .tab "directoryConfiguration" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipDirectoryConfiguration" }}"></i></th>
             <th>{{ index .tab "protoConfig" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocolConfiguration" }}"></i></th>
             <th class="text-end"></th>
         </tr>
         </thead>
         <tbody>
-        {{ range .server }}
+        {{ range .localClient }}
         <tr>
-            <td><i class="bi bi-hdd-network me-1"></i></td>
+            <td><i class="bi bi-person"></i></td>
             <td><strong>{{ .Name }}</strong></td>
             <td>{{ .Protocol }}</td>
-            <td>{{ .Address.Host }}</td>
-            <td>{{ .Address.Port }}</td>
-            <td>
-              <button class="btn btn-outline-primary modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#directoriesModal_{{ .ID }}">
-                <i class="bi bi-folder2-open"></i>
-              </button>
-              <div class="modal fade" id="directoriesModal_{{ .ID }}" tabindex="-1" aria-labelledby="directoriesModalLabel_{{ .ID }}" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
-                  <div class="modal-content p-3 border rounded bg-light">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="directoriesModalLabel_{{ .ID }}">
-                        {{ index $.tab "directoryConfiguration" }} : {{ .Name }}
-                      </h5>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                      <div class="form-input mb-2">
-                        <label class="col-form-label">{{ index $.tab "rootDir" }} :</label>
-                        <input type="text" class="form-control-plaintext" value="{{ .RootDir }}" readonly>
-                      </div>
-                      <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
-                      <div class="form-input mb-2">
-                        <label class="col-form-label">{{ index $.tab "receiveDir" }} :</label>
-                        <input type="text" class="form-control-plaintext" value="{{ .ReceiveDir }}" readonly>
-                      </div>
-                      <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
-                      <div class="form-input mb-2">
-                        <label class="col-form-label">{{ index $.tab "sendDir" }} :</label>
-                        <input type="text" class="form-control-plaintext" value="{{ .SendDir }}" readonly>
-                      </div>
-                      <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
-                      <div class="form-input mb-2">
-                        <label class="col-form-label">{{ index $.tab "tmpReceiveDir" }} :</label>
-                        <input type="text" class="form-control-plaintext" value="{{ .TmpReceiveDir }}" readonly>
-                      </div>
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ index $.tab "close" }}</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </td>
+            <td>{{ .LocalAddress.Host }}</td>
+            <td>{{ .LocalAddress.Port }}</td>
             <td>
               <button class="btn btn-outline-primary modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#protoConfigModal_{{ .ID }}">
                     <i class="bi bi-gear-wide-connected"></i>
@@ -281,34 +221,28 @@
                 </div>
               </td>
             <td class="text-end">
-                <a class="btn btn-outline-warning btn-sm me-1" href="server_authentication?serverID={{ .ID }}" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "tooltipServerAuthentication" }}">
-                  <i class="bi bi-shield-lock"></i>
-                </a>
-                <a class="btn btn-outline-info btn-sm me-1" href="local_account_management?serverID={{ .ID }}" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "tooltipLocalAccountManagement" }}">
-                  <i class="bi bi-person-gear"></i>
-                </a>
                 {{ if contains $.myPermission.Servers "w" }}
-                <button class="btn btn-outline-primary btn-sm me-1" data-bs-toggle="modal" data-bs-target="#editServerModal_{{ .ID }}">
+                <button class="btn btn-outline-primary btn-sm me-1" data-bs-toggle="modal" data-bs-target="#editLocalClientModal_{{ .ID }}">
                     <i class="bi bi-pencil"></i>
                 </button>
-                <div class="modal fade" id="editServerModal_{{ .ID }}" tabindex="-1" aria-labelledby="editServerModalLabel_{{ .ID }}" aria-hidden="true">
+                <div class="modal fade" id="editLocalClientModal_{{ .ID }}" tabindex="-1" aria-labelledby="editLocalClientModalLabel_{{ .ID }}" aria-hidden="true">
                     <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                         <form method="post" class="p-3 border rounded bg-light">
-                        <input type="hidden" name="editServerID" value="{{ .ID }}">
+                        <input type="hidden" name="editLocalClientID" value="{{ .ID }}">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="editServerModalLabel_{{ .ID }}">{{ index $.tab "edit" }}: {{ .Name }}</h5>
+                            <h5 class="modal-title" id="editLocalClientModalLabel_{{ .ID }}">{{ index $.tab "edit" }}: {{ .Name }}</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
                             <div class="form-group">
-                            <label class="col-form-label">{{ index $.tab "servers" }} :</label>
-                            <input type="text" name="editServerName" class="form-control" required value="{{ .Name }}">
+                            <label class="col-form-label">{{ index $.tab "localClientStr" }} :</label>
+                            <input type="text" name="editLocalClientName" class="form-control" required value="{{ .Name }}">
                             </div>
                             <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
                             <div class="form-group mt-4">
                             <label class="col-form-label">{{ index $.tab "protocol" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i> :</label>
-                            <select name="editServerProtocol" class="form-select protocolConfiguration-select" required>
+                            <select name="editLocalClientProtocol" class="form-select protocolConfiguration-select" required>
                                 <option value="r66" {{ if eq .Protocol "r66" }}selected{{ end }}>R66</option>
                                 <option value="r66-tls" {{ if eq .Protocol "r66-tls" }}selected{{ end }}>R66-TLS</option>
                                 <option value="sftp" {{ if eq .Protocol "sftp" }}selected{{ end }}>SFTP</option>
@@ -323,28 +257,12 @@
                             <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
                             <div class="form-group mt-4">
                             <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "host" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i> :</label>
-                            <input type="text" name="editServerHost" class="form-control" required value="{{ .Address.Host }}">
+                            <input type="text" name="editLocalClientHost" class="form-control" required value="{{ .LocalAddress.Host }}">
                             </div>
                             <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
                             <div class="form-group mt-4">
                             <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "port" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i> :</label>
-                            <input type="text" name="editServerPort" class="form-control" required value="{{ .Address.Port }}">
-                            </div>
-                            <div class="form-group mt-4">
-                            <label class="col-form-label">{{ index $.tab "rootDir" }} :</label>
-                            <input type="text" name="editServerRootDir" class="form-control" required value="{{ .RootDir }}">
-                            </div>
-                            <div class="form-group mt-4">
-                            <label class="col-form-label">{{ index $.tab "receiveDir" }} :</label>
-                            <input type="text" name="editServerReceiveDir" class="form-control" required value="{{ .ReceiveDir }}">
-                            </div>
-                            <div class="form-group mt-4">
-                            <label class="col-form-label">{{ index $.tab "sendDir" }} :</label>
-                            <input type="text" name="editServerSendDir" class="form-control" required value="{{ .SendDir }}">
-                            </div>
-                            <div class="form-group mt-4">
-                            <label class="col-form-label">{{ index $.tab "tmpReceiveDir" }} :</label>
-                            <input type="text" name="editServerTmpReceiveDir" class="form-control" required value="{{ .TmpReceiveDir }}">
+                            <input type="text" name="editLocalClientPort" class="form-control" required value="{{ .LocalAddress.Port }}">
                             </div>
                             {{ template "editR66" (dict "tab" $.tab "ProtoConfig" .ProtoConfig) }}
                             {{ template "editFtp" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions) }}
@@ -362,7 +280,7 @@
                 {{ end }}
                 {{ if contains $.myPermission.Servers "d" }}
                 <form method="post" class="d-inline">
-                    <input type="hidden" name="deleteServer" value="{{ .ID }}">
+                    <input type="hidden" name="deleteLocalClient" value="{{ .ID }}">
                     <button type="submit" class="btn btn-outline-danger btn-sm" onclick="return confirm('{{ index $.tab "confirmDelete" }}')">
                     <i class="bi bi-trash"></i>
                     </button>
@@ -385,6 +303,6 @@
   {{ end }}
 {{ end }}
 
-{{ define "server_management_page" }}
+{{ define "local_client_management_page" }}
   {{ template "index" . }}
 {{ end }}
